--- a/TODO
+++ b/TODO
@@ -1,2 +1,9 @@
 - lighthouse score
 - team allocation of pages
+- find all these ghost pages
+- find all modules used
+- extract content based on module
+
+
+
+url, lastmod, market, lh_report, lh_p, lh_a, lh_b, lh_s
