--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 - lighthouse score
+  - catch errors
+  - last updated
+  - use mobile/ + simulated connection
+
 - team allocation of pages
 - find all these ghost pages
 - find all modules used
